-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 6.0.2
-
f99094a0b8 (qt-creator/qt-creator/7.0) f99094a0b8 (qt-creator/qt-creator/master) f99094a0b8 (qt-creator/qt-creator/qds-3.3)
After assigning variables with structured binding inserting a newline results in two extra indent levels (I'm guessing because of lambda-related reasons).
Example:
#include <tuple> extern std::tuple<int, char> tuple_func(); void function() { auto [a, b] = tuple_func(); // Next line starts here // Should have started here, works with clang-format }